# unworldly

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/unworldly/: action.yml
.github/workflows/: ci.yml  publish.yml
.specify/memory/: constitution.md
demo/: README.md  demo.tape  record.sh  render_cast.py  simulate.py
history/prompts/1-process-monitoring/: 001-implement-process-monitoring.green.prompt.md
history/prompts/constitution/: 001-initial-constitution-ratification.constitution.prompt.md
specs/1-process-monitoring/: plan.md  spec.md  tasks.md
specs/1-process-monitoring/checklists/: requirements.md
specs/hipaa-detection/: spec.md
src/: agent-detect.ts  cli.ts  command-monitor.ts  command-risk.ts  config.ts  display.ts  index.ts  integrity.ts  replay.ts  report.ts  risk.ts  session.ts  types.ts  watcher.ts
tests/: agent-detect.test.ts  command-monitor.test.ts  command-risk.test.ts  config.test.ts  display.test.ts  integrity.test.ts  risk.test.ts  session.test.ts  test_agent_detect.py  test_alerts.py  test_command_monitor.py  test_command_risk.py  test_config.py  test_diff.py  test_display.py  test_hipaa_risk.py  test_integrity.py  test_owasp.py  test_risk.py  test_sarif.py  test_session.py
unworldly/: __init__.py  agent_detect.py  alerts.py  cli.py  command_monitor.py  command_risk.py  config.py  diff.py  display.py  hipaa_risk.py  integrity.py  owasp.py  replay.py  report.py  review.py  risk.py  sarif.py  session.py  snapshot.py  types.py  watcher.py
