[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unworldly-recorder"
version = "0.4.1"
description = "The flight recorder for AI agents. Record, replay, and audit everything AI agents do on your system."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Muhammad Dilawar Shafiq (Dilawar Gopang)", email = "dilawar.gopang@gmail.com"},
]
keywords = [
    "ai", "agents", "security", "monitoring", "audit",
    "flight-recorder", "black-box", "devtools", "cli",
    "ai-safety", "cybersecurity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "watchdog>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/DilawarShafiq/unworldly"
Repository = "https://github.com/DilawarShafiq/unworldly.git"
Issues = "https://github.com/DilawarShafiq/unworldly/issues"
Changelog = "https://github.com/DilawarShafiq/unworldly/blob/master/CHANGELOG.md"

[project.scripts]
unworldly = "unworldly.cli:main"

[tool.setuptools.packages.find]
include = ["unworldly*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["unworldly"]

[tool.coverage.report]
show_missing = true
skip_covered = true
